--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <head>
         <title>Menu</title>
         <meta charset="UTF-8" />
-	    <link rel="stylesheet" href="../Common/game.css"/>	
-	    <script type="module" src="game.js"></script>
+	    <link rel="stylesheet" href="index.css"/>	
     </head>
 
     <body>
+        <div class="header">
+            <h1>ARCADE</h1>
+        </div>
 	    <div class="container">
-            <a href="./Pong/pong.html">Pong</a>
-            <a href="./BrickDestroyer/brickDestroyer.html">Brick Destr</a>
-	    </div>
+            <a href="./Pong/pong.html"><img src="./Pictures/Pong.png"></a>
+            <a href="./BrickDestroyer/brickDestroyer.html"><img src="./Pictures/BrickDestroyer.png"></a>
+        </div>
+        <footer>
+            <a href="./Instructions/instructions.html">Instructions</a>
+        </footer>
     </body>
     
 </html>
