--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
 	    <div class="container">
             <a href="./Pong/pong.html"><img src="./Pictures/Pong.png"></a>
+            <a href="./Platform/platform.html"><img src="./Pictures/Platform.png"></a>
             <a href="./BrickDestroyer/brickDestroyer.html"><img src="./Pictures/BrickDestroyer.png"></a>
         </div>
         <footer>
