--- a/Instructions/instructions.html
+++ b/Instructions/instructions.html
@@ -9,8 +9,44 @@
     </head>
 
     <body>
-        <div class="header">
-            <h1>Instructions</h1>
+        <div class="title">
+            <h1>Instrucțiuni</h1>
+        </div>
+        <div class="container">
+            <div>
+                <h3>General</h3>
+                <p>Pentru a alege modul de joc apăsați click pe una din imaginile din meniul principal</p>
+                <p>Jocul începe după ce apăsați tasta SPACE</p>
+                <p>Pentru pauză apăsați tasta ESC</p>
+            </div> 
+        </div>
+        <div class="container">
+            <div>
+                <h3>Pong</h3>
+                <p>Este un joc clasic de ping pong cu doi jucători. Jucătorii sunt controlați folosind tastele A - D respectiv săgeata stânga - dreapta</p>
+                <p>Primul jucător ce ajunge la 3 puncte câștigă</p>
+            </div> 
+            <img src="../Pictures/Pong.png">
+        </div>
+        <div class="container">
+            <img src="../Pictures/BrickDestroyer.png">
+            <div>
+                <h3>Brick Destroyer</h3>
+                <p>Scopul jocului este de a distruge toate 'cărămizile' pentru a parcurge toate nivelele pentru a ajunge la final</p>
+                <p>Dacă mingea atinge partea inferioară a ecranului, jucătorul pierde o viață</p>
+                <p>Viețile rămase ale acestuia sunt afișate în partea stânga sus</p>
+            </div> 
+        </div>
+        <div class="container">
+            <div>
+                <h3>2D Platform</h3>
+                <p>Trebuie să treceți de toate obstacolele pentru a ajunge la finish (obstacolul galben)</p>
+                <p>După ce jucătorul ajunge pe ultimul obstacol se trece la următorul nivel</p>
+            </div> 
+            <img src="../Pictures/Platform.png">
+        </div>
+        <div class="title">
+            <h2>Spor la joc!</h2>
         </div>
     </body>
     
